--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,20 @@
 [tox]
-envlist = py38,mypy,isort,black,flake8,doc
+envlist = py37,py38,mypy,isort,black,flake8,doc
 
 [testenv]
 commands =
-    # this ugly hack is here because:
-    # https://github.com/tox-dev/tox/issues/149
+# this ugly hack is here because:
+# https://github.com/tox-dev/tox/issues/149
     pip install -q \
-        -r {toxinidir}/requirements.txt
-    py.test \
-        --cov-report=html:coverage-html --cov-report= --cov=flattering \
-        --doctest-modules --junitxml=test-results/junit.xml \
-        {posargs:flattering tests}
+    -r {toxinidir}/requirements.txt
+    pip install -q \
+    -r {toxinidir}/requirements-dev.txt
+    py.test {posargs:flattering tests}
+
 
 [testenv:mypy]
 deps =
     mypy==0.812
-
 commands = mypy --ignore-missing-imports --no-warn-no-return flattering tests
 
 [testenv:flake8]
@@ -25,20 +24,20 @@ deps =
     flake8-print>=3.0.1
 commands =
     flake8 \
-        flattering \
-        setup.py \
-        tests \
-        {posargs}
+    flattering \
+    setup.py \
+    tests \
+    {posargs}
 
 [testenv:black]
 deps =
     black
 commands =
     black \
-        flattering \
-        setup.py \
-        tests/ \
-        {posargs}
+    flattering \
+    setup.py \
+    tests/ \
+    {posargs}
 
 [testenv:black-check]
 deps =
@@ -50,10 +49,10 @@ commands =
 deps = isort
 commands =
     isort \
-        flattering/ \
-        setup.py \
-        tests/ \
-        {posargs}
+    flattering/ \
+    setup.py \
+    tests/ \
+    {posargs}
 
 [testenv:isort-check]
 deps = {[testenv:isort]deps}
